--- a/c/configure.ac
+++ b/c/configure.ac
@@ -9,7 +9,7 @@ AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
        Makefile
-       src/Makefile
+       day01/Makefile
 ])
 
 AC_OUTPUT
