--- a/c/configure.ac
+++ b/c/configure.ac
@@ -3,7 +3,7 @@ AC_PREREQ([2.69])
 AC_INIT([adventofcode2017], [1.0.0], [gr.grzybek@gmail.com])
 
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
-AM_SILENT_RULES
+AM_SILENT_RULES([no])
 
 AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
