--- a/c/Makefile
+++ b/c/Makefile
@@ -208,7 +208,7 @@ AUTOMAKE = ${SHELL} /home/ggrzybek/sources/github.com/grgrzybek/adventofcode2017
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O2
+CFLAGS = 
 CPPFLAGS = 
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
