--- a/c/configure.ac
+++ b/c/configure.ac
@@ -5,6 +5,8 @@ AC_INIT([adventofcode2017], [1.0.0], [gr.grzybek@gmail.com])
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
 AM_SILENT_RULES([no])
 
+${CFLAGS=""}
+
 AC_PROG_CC
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
