--- a/c/configure.ac
+++ b/c/configure.ac
@@ -3,7 +3,7 @@ AC_PREREQ([2.69])
 AC_INIT([adventofcode2017], [1.0.0], [gr.grzybek@gmail.com])
 
 AM_INIT_AUTOMAKE([-Wall -Werror foreign])
-AM_SILENT_RULES([no])
+AM_SILENT_RULES([yes])
 
 ${CFLAGS=""}
 
@@ -12,6 +12,7 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([
        Makefile
        day01/Makefile
+       day02/Makefile
 ])
 
 AC_OUTPUT
