--- a/c/day01/Makefile.am
+++ b/c/day01/Makefile.am
@@ -1,3 +1,5 @@
 bin_PROGRAMS = day01
 day01_SOURCES = day01.c
-day01_CFLAGS = -g -O0
+
+# we can just `make CFLAGS="-g 0-O0" instead
+#day01_CFLAGS = -g -O0
