--- a/go/glide.yaml
+++ b/go/glide.yaml
@@ -1,2 +1,4 @@
 package: github.com/grgrzybek/adventofcode2017/go
-import: []
+import:
+- package: github.com/golang/glog
+  version: fca8c8854093a154ff1eb580aae10276ad6b1b5f
