[C++] Solution for day 06

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -34,6 +34,7 @@ set(commands
     day03
     day04
     day05
+    day06
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
