--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -35,6 +35,8 @@ set(commands
     day04
     day05
     day06
+    day07a
+    day07b
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
