[C++] Solution for day 09

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -38,6 +38,7 @@ set(commands
     day07a
     day07b
     day08
+    day09
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
