[C++] Solution for day 11

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -40,13 +40,14 @@ set(commands
     day08
     day09
     day10
+    day11
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
 include_directories("${CMAKE_INSTALL_PREFIX}/include")
 include_directories("${CMAKE_SOURCE_DIR}/include")
 
-add_library(aoc2019 SHARED src/utils/utils.cc)
+add_library(aoc2019 SHARED src/utils/utils.cc src/utils/intcode.cc)
 
 foreach(cmd ${commands})
     add_executable(${cmd})
