[C++] Solution for day 12

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -41,6 +41,8 @@ set(commands
     day09
     day10
     day11
+    day12a
+    day12b
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
