[Go] Solution for Day 03

--- a/go/Makefile
+++ b/go/Makefile
@@ -18,7 +18,8 @@
 #
 
 FILES = internal/pkg/day01/day01.go \
-	internal/pkg/day02/day02.go
+	internal/pkg/day02/day02.go \
+	internal/pkg/day03/day03.go
 
 all: bin/hello bin/aoc2020
 
