--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -30,6 +30,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O0 -g")
 set(commands
     day01
     day02
+    day03
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
