[Go] Solution for Day 05

--- a/go/Makefile
+++ b/go/Makefile
@@ -20,7 +20,8 @@
 FILES = internal/pkg/day01/day01.go \
 	internal/pkg/day02/day02.go \
 	internal/pkg/day03/day03.go \
-	internal/pkg/day04/day04.go
+	internal/pkg/day04/day04.go \
+	internal/pkg/day05/day05.go
 
 all: bin/hello bin/aoc2020
 
