--- a/go/Makefile
+++ b/go/Makefile
@@ -24,7 +24,8 @@ FILES = internal/pkg/day01/day01.go \
 	internal/pkg/day05/day05.go \
 	internal/pkg/day06/day06.go \
 	internal/pkg/day07/day07.go \
-	internal/pkg/day08/day08.go
+	internal/pkg/day08/day08.go \
+	internal/pkg/day09/day09.go
 
 all: bin/hello bin/aoc2020
 
