[Go] Solution for Day 12

--- a/go/Makefile
+++ b/go/Makefile
@@ -29,6 +29,7 @@ FILES = \
 	internal/pkg/day09/day09.go \
 	internal/pkg/day10/day10.go \
 	internal/pkg/day11/day11.go \
+	internal/pkg/day12/day12.go \
 	cmd/aoc2020/main.go
 
 all: bin/hello bin/aoc2020
