--- a/go/Makefile
+++ b/go/Makefile
@@ -31,6 +31,7 @@ FILES = \
 	internal/pkg/day11/day11.go \
 	internal/pkg/day12/day12.go \
 	internal/pkg/day13/day13.go \
+	internal/pkg/day14/day14.go \
 	cmd/aoc2020/main.go
 
 all: bin/hello bin/aoc2020
