--- a/go/Makefile
+++ b/go/Makefile
@@ -38,6 +38,7 @@ FILES = \
 	internal/pkg/day18/day18.go \
 	internal/pkg/day19/day19.go \
 	internal/pkg/day20/day20.go \
+	internal/pkg/day21/day21.go \
 	cmd/aoc2020/main.go
 
 all: bin/hello bin/aoc2020
