[Go] Solution for Day 22

--- a/go/Makefile
+++ b/go/Makefile
@@ -39,6 +39,7 @@ FILES = \
 	internal/pkg/day19/day19.go \
 	internal/pkg/day20/day20.go \
 	internal/pkg/day21/day21.go \
+	internal/pkg/day22/day22.go \
 	cmd/aoc2020/main.go
 
 all: bin/hello bin/aoc2020
