--- a/go/Makefile
+++ b/go/Makefile
@@ -41,6 +41,7 @@ FILES = \
 	internal/pkg/day21/day21.go \
 	internal/pkg/day22/day22.go \
 	internal/pkg/day23/day23.go \
+	internal/pkg/day24/day24.go \
 	cmd/aoc2020/main.go
 
 all: bin/hello bin/aoc2020
