--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -29,6 +29,7 @@ set(commands
     day02
     day03
     day04
+    day05
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
