[C++] Solution for Day 07

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -31,6 +31,7 @@ set(commands
     day04
     day05
     day06
+    day07
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
