[C++] Solution for Day 11

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -35,6 +35,7 @@ set(commands
     day08
     day09
     day10
+    day11
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
