[C++] Solution for Day 21

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -45,6 +45,7 @@ set(commands
     day18
     day19
     day20
+    day21
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
