[C++] Solution for Day 22

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -46,6 +46,7 @@ set(commands
     day19
     day20
     day21
+    day22
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
