--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -32,6 +32,7 @@ set(commands
     day05
     day06
     day07
+    day08
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
