[2022/C++] Solution for Day 15 - part 1

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -39,6 +39,7 @@ set(commands
     day12
     day13
     day14
+    day15
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
