[2022/C++] Solution for Day 20 - part 1

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -43,6 +43,7 @@ set(commands
     day16
     day17
     day18
+    day20
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
