[2022/C++] Solution for Day 21 - part 1

--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -44,6 +44,7 @@ set(commands
     day17
     day18
     day20
+    day21
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
