--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -33,6 +33,7 @@ set(commands
     day06
     day07
     day08
+    day09
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
