--- a/c/CMakeLists.txt
+++ b/c/CMakeLists.txt
@@ -41,6 +41,7 @@ set(commands
     day15
     day16
     day17
+    day18
 )
 
 configure_file(config.h.in "${CMAKE_INSTALL_PREFIX}/include/config.h")
